import { SoftwareApplication } from "./SoftwareApplication";
import { string,string,DigitalPlatformEnumeration } from "./string,string,DigitalPlatformEnumeration";


export class EntryPoint extends Intangible {
  actionApplication: SoftwareApplication;
  application: SoftwareApplication;
  actionPlatform: string,string,DigitalPlatformEnumeration;
  httpMethod: string;
  urlTemplate: string;
  encodingType: string;
  contentType: string;


}
