

export class Intangible {


}
